--- a/package.yaml
+++ b/package.yaml
@@ -42,6 +42,7 @@ dependencies:
 - case-insensitive
 - wai
 - foreign-store
+- mime-mail
 
 # The library contains all of our application code. The executable
 # defined below is just a thin wrapper.
