--- a/package.yaml
+++ b/package.yaml
@@ -1,4 +1,4 @@
-name:    memberportal2
+name:    rememberportal
 version: "0.0.0"
 
 dependencies:
@@ -64,7 +64,7 @@ library:
 
 # Runnable executable for our application
 executables:
-  memberportal2:
+  rememberportal:
     main: main.hs
     source-dirs: app
     ghc-options:
@@ -72,19 +72,19 @@ executables:
     - -rtsopts
     - -with-rtsopts=-N
     dependencies:
-    - memberportal2
+    - rememberportal
     when:
     - condition: flag(library-only)
       buildable: false
 
 # Test suite
 tests:
-  memberportal2-test:
+  rememberportal-test:
     main: Spec.hs
     source-dirs: test
     ghc-options: -Wall
     dependencies:
-    - memberportal2
+    - rememberportal
     - hspec >=2.0.0
     - yesod-test
     - microlens
