--- a/rememberportal/package.yaml
+++ b/rememberportal/package.yaml
@@ -76,6 +76,18 @@ executables:
     when:
     - condition: flag(library-only)
       buildable: false
+  rememberportal-create-fees:
+    main: create-fees-main.hs
+    source-dirs: app
+    ghc-options:
+    - -threaded
+    - -rtsopts
+    - -with-rtsopts=-N
+    dependencies:
+    - rememberportal
+    when:
+    - condition: flag(library-only)
+      buildable: false
 
 # Test suite
 tests:
