--- a/rememberportal/config/settings.yml
+++ b/rememberportal/config/settings.yml
@@ -39,3 +39,5 @@ org-name: "_env:RMP_ORG_NAME:memberportal"
 mail-sendmail-bin: "_env:RMP_SENDMAIL_BIN:/sbin/sendmail"
 mail-from: "_env:RMP_MAIL_FROM:noreply"
 currency: "_env:RMP_CURRENCY:BTC"
+
+fio-token-path: "_env:RMP_FIO_TOKEN_PATH:"
