--- a/config/settings.yml
+++ b/config/settings.yml
@@ -5,20 +5,31 @@
 
 static-dir:     "_env:RMP_STATIC_DIR:static"
 host:           "_env:RMP_HOST:*4" # any IPv4 host
-port:           "_env:RMP_PORT:3000" # NB: The port `yesod devel` uses is distinct from this value. Set the `yesod devel` port from the command line.
+port:           "_env:RMP_PORT:3000"
 ip-from-header: "_env:RMP_IP_FROM_HEADER:false"
 
+org-name: "_env:RMP_ORG_NAME:memberportal"
+currency: "_env:RMP_CURRENCY:BTC"
+
+mail-sendmail-bin: "_env:RMP_SENDMAIL_BIN:/sbin/sendmail"
+mail-from:         "_env:RMP_MAIL_FROM:noreply"
+
 # Default behavior: determine the application root from the request headers.
-approot:        "_env:RMP_APPROOT:"
+approot: "_env:RMP_APPROOT:"
 
-# By default, `yesod devel` runs in development, and built executables use
-# production settings (see below). To override this, use the following:
-#
+database:
+  # See config/test-settings.yml for an override during tests
+  database: "_env:RMP_SQLITE_DATABASE:rememberportal.sqlite3"
+  poolsize: "_env:RMP_SQLITE_POOLSIZE:10"
+
+# Path fo file with token to FIO bank API. Empty means FIO sync is disabled.
+fio-token-path: "_env:RMP_FIO_TOKEN_PATH:"
+
+# When true, member can choose amount that they'll be charged each month (provided that the amount is higher than indicated by membership level).
+flexible-fees: "_env:RMP_FLEXIBLE_FEES:false"
+
+# You can ignore these, `yesod devel` sets them automatically.
 # development: false
-
-# Optional values with the following production defaults.
-# In development, they default to the inverse.
-#
 # detailed-logging: false
 # should-log-all: false
 # reload-templates: false
@@ -28,19 +39,3 @@ approot:        "_env:RMP_APPROOT:"
 
 # NB: If you need a numeric value (e.g. 123) to parse as a String, wrap it in single quotes (e.g. "_env:RMP_PGPASS:'123'")
 # See https://github.com/yesodweb/yesod/wiki/Configuration#parsing-numeric-values-as-strings
-
-database:
-  # See config/test-settings.yml for an override during tests
-  database: "_env:RMP_SQLITE_DATABASE:rememberportal.sqlite3"
-  poolsize: "_env:RMP_SQLITE_POOLSIZE:10"
-
-org-name: "_env:RMP_ORG_NAME:memberportal"
-
-mail-sendmail-bin: "_env:RMP_SENDMAIL_BIN:/sbin/sendmail"
-mail-from: "_env:RMP_MAIL_FROM:noreply"
-currency: "_env:RMP_CURRENCY:BTC"
-
-fio-token-path: "_env:RMP_FIO_TOKEN_PATH:"
-
-# When true, member can choose amount that they'll be charged each month (provided that the amount is higher than indicated by membership level).
-flexible-fees: "_env:RMP_FLEXIBLE_FEES:false"
